--- a/my-app/src/components/Header/Header.module.css
+++ b/my-app/src/components/Header/Header.module.css
@@ -20,7 +20,26 @@
 }
 
 .logo {
-    width: 100px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
+    -webkit-touch-callout: none; 
+}
+
+.logoName {
+    font-size: 30px;
+    font-weight: 800;
+    color: #fff;
+    margin: 0;
+}
+
+.logoImg {
+    width: 30px;
     flex-shrink: 0;
 }
 
