--- a/my-app/src/components/SearchResults/SearchResults.module.css
+++ b/my-app/src/components/SearchResults/SearchResults.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
@@ -89,9 +89,7 @@
   margin: 0;
   text-transform: capitalize;
 }
-
-/* Адаптивность */
-@media (max-width: 768px) {
+ @media (max-width: 768px) {
   .container {
     padding: 10px;
   }
@@ -112,4 +110,4 @@
   .title {
     font-size: 14px;
   }
-} 
+}   */
