--- a/my-app/src/components/TrendingMovies/TrendingMovies.module.css
+++ b/my-app/src/components/TrendingMovies/TrendingMovies.module.css
@@ -13,6 +13,7 @@
   }
   
   .movieCard {
+    max-width: 200px;
     position: relative;
     background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
     border-radius: 12px;
@@ -34,6 +35,7 @@
   } 
 
   .movieTitle {
+    word-break: break-all;
     font-size: 16px;
     font-weight: 600;
     margin: 0 0 8px 0;
@@ -69,6 +71,45 @@
   
   
   
+  /* TrendingMovies.module.css */
+.trendingWrapper {
+  text-align: center;
+}
+
+.carousel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.trendingMovies {
+  display: flex;
+  overflow: hidden;
+  gap: 16px;
+}
+
+.movieCard {
+  min-width: 150px;
+  background: #222;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+}
+
+.moviePoster img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.navButton {
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
+}
+
+
   /*
   
   .movieRating {
